base dashboard changed to support notification_count

--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -44,7 +44,7 @@
             </div>
             <a href="{% url 'notification:list' %}">
                 <div class="col-xs-4 left" style="text-align: left; padding-left: 10px;">
-                    <span class="badge">{{ notifications.count }}</span>
+                    <span class="badge">{{ notifications_count }}</span>
                     <img style="margin-right: 2px;" src="{% static "image/base/message.png" %}"/>
                 </div>
             </a>
