enquiry assign status added to ui

--- a/assign/templates/enquiry_response_status.html
+++ b/assign/templates/enquiry_response_status.html
@@ -146,6 +146,14 @@
 
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xs-1">
+                        وضعیت ارجاع
+                    </div>
+                    <div class="col-xs-5">
+                        {% trans enquiry_assign.status %}
+                    </div>
+                </div>
             </div>
         </div>
     {% endif %}
