--- a/notification/templates/notification_list.html
+++ b/notification/templates/notification_list.html
@@ -1,4 +1,5 @@
 {% extends 'base_dashboard.html' %}
+{% load i18n %}
 
 {% block content %}
     <div style="border: 1px solid #dddddd; padding: 15px 30px 15px 30px;border-radius: 5px;"
@@ -16,7 +17,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for assign in notifications %}
+            {% for assign in assigns %}
                 <tr id="{{ request.id }}">
                     {% comment %}                    class="{% if request.status == 'intro' %}
             warning
@@ -26,7 +27,13 @@
                     <td>{{ assign.assign_type.local_name }}</td>
                     <td>{{ assign.get_persian_expire_date }}</td>
                     {#                    <td>{{ assign.request.id }}</td>#}
-                    <td>{{ assign.priority }}</td>
+                    <td>
+                        {% with assign.priority|stringformat:"s" as pp %}
+                            {% with 'p_'|add:pp  as p %}
+                                {% trans p %}
+                            {% endwith %}
+                        {% endwith %}
+                    </td>
                     <td><a href="{{ assign.assign_type.url }}{{ assign.id }}"> رسیدگی</a></td>
                 </tr>
             {% endfor %}
