--- a/assign/templates/enquiry_response.html
+++ b/assign/templates/enquiry_response.html
@@ -4,8 +4,14 @@
     <div style="padding-top:15px; padding-right: 30px; margin-right: 30px;padding-bottom:15px; margin-bottom: 15px; margin-left: 30px; border:solid 1px #102E37; border-radius: 6px;">
 
         <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-4">
                 <a href="{% url 'grant:submit' assign.request.id %}">مشاهده اطلاعات درخواست</a>
+            </div>
+            <div class="col-xs-4">
+                <a href="{% url 'guarantor:list' assign.request.id %}">مشاهده اطلاعات ضامنین</a>
+            </div>
+            <div class="col-xs-4">
+                <a href="{% url 'grant:check_list' assign.request.id %}">مشاهده چک لیست</a>
             </div>
         </div>
         {% for action in assign.actions.all %}
@@ -21,7 +27,8 @@
                     <div class="row">
                         <div class="col-xs-2">شماره مرجع اقدام</div>
                         <div class="col-xs-3">
-                            <input type="text" name="reference_number" class="form-control" value="{{ action.response.reference_number}}"/>
+                            <input type="text" name="reference_number" class="form-control"
+                                   value="{{ action.response.reference_number }}"/>
                         </div>
                         <div class="col-xs-2">نتیجه اقدام</div>
                         <div class="col-xs-3">
