--- a/start_grant/templates/track.html
+++ b/start_grant/templates/track.html
@@ -1,4 +1,5 @@
 {% extends 'base_dashboard.html' %}
+{% load i18n %}
 
 {% block content %}
     <div style="border: 1px solid #dddddd; padding: 15px 30px 15px 30px;border-radius: 5px;"
@@ -36,7 +37,7 @@
                     <td>{{ request.business_part.local_name }}</td>
                     <td>{{ request.request_description.local_name }}</td>
                     <td>{% if request.status == 'intro' %}
-                        ثبت اولیه
+                        {%  trans request.status %}
                         <span style="padding-right: 3px;">
                         {% if request.type == 'haghighi' %}
                             <a href="{% url 'grant:submit'  request.id %}">ادامه ثبت اطلاعات</a>
@@ -45,7 +46,7 @@
                         {% endif %}
                         </span>
                     {% elif request.status == 'req_info_completed' %}
-                        ثبت تکمیلی
+                        {% trans request.status %}
                         <span style="padding-right: 3px;">
                           {% if request.type == 'haghighi' %}
                               <a href="{% url 'grant:submit'  request.id %}">ویرایش اطلاعات</a>
@@ -54,7 +55,7 @@
                           {% endif %}
                         </span>
                     {% elif request.status == 'ready_for_checklist' %}
-                        آماده پر کردن چک لیست
+                        {% trans request.status %}
                         <span style="padding-right: 3px;">
                             <a href="{% url 'grant:check_list' request.id %}">پرکردن چک لیست</a>
                         </span>
@@ -67,10 +68,8 @@
                           {% endif %}
                         </span>
 
-                    {% elif request.status == 'checklist_completed' %}
-                        آماده ارجاع
                     {% else %}
-                        new
+                        {% trans request.status %}
                     {% endif %}
                     </td>
                     <td>
