--- a/notification/templates/notification_list.html
+++ b/notification/templates/notification_list.html
@@ -12,6 +12,7 @@
                 <td>تاریخ ارجاع</td>
                 <td>نوع ارجاع</td>
                 <td>حداکثر تاریخ انجام اقدامات</td>
+                <td>یادداشت اختصاصی</td>
                 <td>ارجحیت</td>
                 <td>عملیات</td>
             </tr>
@@ -27,6 +28,7 @@
                     <td>{{ assign.assign_type.local_name }}</td>
                     <td>{{ assign.get_persian_expire_date }}</td>
                     {#                    <td>{{ assign.request.id }}</td>#}
+                    <td>{{ assign.comment | linebreaksbr }}</td>
                     <td>
                         {% with assign.priority|stringformat:"s" as pp %}
                             {% with 'p_'|add:pp  as p %}
