ui changed to resolve bug

--- a/assign/templates/enquiry_response.html
+++ b/assign/templates/enquiry_response.html
@@ -14,26 +14,26 @@
                 <a target="_blank" href="{% url 'grant:check_list' assign.request.id %}">مشاهده چک لیست</a>
             </div>
         </div>
-        {% for action in assign.actions.all %}
-            <div class="row action" id="action-{{ action.id }}" status="{{ action.response.status }}"
+        {% for response in assign.response.action_responses.all %}
+            <div class="row action" id="action-{{ response.id }}" status="{{ response.status }}"
                  style="padding-top:15px; padding-right: 30px; margin-right: 30px;padding-bottom:15px; margin-bottom: 15px; margin-left: 30px; border:solid 1px #a3a3a3; border-radius: 6px; ">
 
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-xs-11">
-                        {{ action.local_name }}
+                        {{ response.action.local_name }}
                     </div>
                 </div>
-                <div id="data_{{ action.id }}">
+                <div id="data_{{ response.id }}">
                     <div class="row">
                         <div class="col-xs-2">شماره مرجع اقدام</div>
                         <div class="col-xs-3">
                             <input type="text" name="reference_number" class="form-control"
-                                   value="{{ action.response.reference_number }}"/>
+                                   value="{{ response.reference_number }}"/>
                         </div>
                         <div class="col-xs-2">نتیجه اقدام</div>
                         <div class="col-xs-3">
                             <select style="width: 100%;" name="accepted"
-                                    value="{{ action.response.accepted }}">
+                                    value="{{ response.accepted }}">
                                 <option value="True">قابل قبول</option>
                                 <option value="False">مردود</option>
                             </select>
@@ -44,27 +44,27 @@
                             شرح اقدام
                         </div>
                         <div class="col-xs-9">
-                            <textarea name="comment" class="form-control">{{ action.response.comment }}</textarea>
+                            <textarea name="comment" class="form-control">{{ response.comment }}</textarea>
                         </div>
                     </div>
                 </div>
                 <div class="row" style="margin-left: 0px; padding-top: 10px;">
                     <div class="col-xs-4">
-                        <form id="form-start-{{ action.id }}" action="{% url 'assign:enquiry_response_start' %}"
+                        <form id="form-start-{{ response.id }}" action="{% url 'assign:enquiry_response_start' %}"
                               method="post">
                             {% csrf_token %}
-                            <input type="hidden" name="action_response_id" value="{{ action.response.id }}"/>
-                            <button type="button" style="width: 100%;" action-id="{{ action.id }}"
+                            <input type="hidden" name="action_response_id" value="{{ response.id }}"/>
+                            <button type="button" style="width: 100%;" action-id="{{ response.id }}"
                                     class="start-action btn btn-success">
                                 آغاز اقدام
                             </button>
                         </form>
                     </div>
                     <div class="col-xs-4">
-                        <form id="form-complete-{{ action.id }}" action="{% url 'assign:enquiry_response_complete' %}">
+                        <form id="form-complete-{{ response.id }}" action="{% url 'assign:enquiry_response_complete' %}">
                             {% csrf_token %}
-                            <input type="hidden" name="action_response_id" value="{{ action.response.id }}"/>
-                            <button type="button" action-id="{{ action.id }}" style="width: 100%;"
+                            <input type="hidden" name="action_response_id" value="{{ response.id }}"/>
+                            <button type="button" action-id="{{ response.id }}" style="width: 100%;"
                                     class="complete-action btn btn-success">
                                 پایان اقدام
                             </button>
@@ -72,11 +72,11 @@
                     </div>
 
                     <div class="col-xs-4">
-                        <form id="form-stop-{{ action.id }}" action="{% url 'assign:enquiry_response_stop' %}"
+                        <form id="form-stop-{{ response.id }}" action="{% url 'assign:enquiry_response_stop' %}"
                               method="post">
                             {% csrf_token %}
-                            <input type="hidden" name="action_response_id" value="{{ action.response.id }}"/>
-                            <button type="button" action-id="{{ action.id }}" style="width: 100%;"
+                            <input type="hidden" name="action_response_id" value="{{ response.id }}"/>
+                            <button type="button" action-id="{{ response.id }}" style="width: 100%;"
                                     class="stop-action btn btn-danger">
                                 توقف
                             </button>
