--- a/start_grant/templates/_contact_info.html
+++ b/start_grant/templates/_contact_info.html
@@ -74,8 +74,9 @@
                     <div class="col-xs-3">
                         <input type="number" class="form-control" name="postal_code"
                                value="{{ customer_info.contact_info.postal_code }}"
+                               minlength="10"
+                               maxlength="10"
                                required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"
                                 />
                     </div>
                 </div>
