Vasighe dictation problem resolved

--- a/guarantor/templates/guarantor_list.html
+++ b/guarantor/templates/guarantor_list.html
@@ -16,7 +16,7 @@
                     <td>شماره ضامن</td>
                     <td>نام</td>
                     <td>نام خانوادگی</td>
-                    <td>وصیغه</td>
+                    <td>وثیقه</td>
                     <td></td>
                 </tr>
                 </thead>
