Job activity removed temporary

--- a/start_grant/templates/_job_info.html
+++ b/start_grant/templates/_job_info.html
@@ -22,16 +22,16 @@
                             {% endfor %}
                         </select>
                     </div>
-                    <div class="col-xs-2">
-                        نوع فعالیت
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" class="form-control" name="job_activity"
-                               value="{{ customer_info.job_info.job_activity }}"
-                               required
-                               data-validation-required-message="وارد کردن این فیلد الزامی است"
-                                />
-                    </div>
+{#                    <div class="col-xs-2">#}
+{#                        نوع فعالیت#}
+{#                    </div>#}
+{#                    <div class="col-xs-3">#}
+{#                        <input type="text" class="form-control" name="job_activity"#}
+{#                               value="{{ customer_info.job_info.job_activity }}"#}
+{#                               required#}
+{#                               data-validation-required-message="وارد کردن این فیلد الزامی است"#}
+{#                                />#}
+{#                    </div>#}
                 </div>
                 <div class="row">
                     <div class="col-xs-2">
