Enterprise customer validation problem resolved

--- a/start_grant/templates/start.html
+++ b/start_grant/templates/start.html
@@ -58,7 +58,7 @@
                                 <input class="form-control" name="cif" id="cif"
                                        pattern="^[0-9]*$"
                                        maxlength="12"
-                                       minlength="8"
+{#                                       minlength="8"#}
                                        data-validation-required-message="وارد کردن نام الزامی است"
                                        data-validation-maxlength-message="بیش از اندازه بلند است"
                                        data-validation-minlength-message="بیش از اندازه کوتاه است"
